// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render App with gb locale correctly 1`] = `
<div
  className="font-regular font-non-jp"
>
  <BackToTopButton />
  <Header />
  <MenuMain />
  <Connect(AboutMain) />
  <StatsMain
    autoload={true}
  />
  <Resume />
  <Skills />
  <ExperienceMain />
  <EducationMain />
  <CertificatesMain />
  <LanguagesMain />
  <PortfolioMain />
  <Badges />
  <FooterMain />
</div>
`;

exports[`should render App with jp locale correctly 1`] = `
<div
  className="font-regular font-jp"
>
  <BackToTopButton />
  <Header />
  <MenuMain />
  <Connect(AboutMain) />
  <StatsMain
    autoload={true}
  />
  <Resume />
  <Skills />
  <ExperienceMain />
  <EducationMain />
  <CertificatesMain />
  <LanguagesMain />
  <PortfolioMain />
  <Badges />
  <FooterMain />
</div>
`;
